# ghosttrap-sdk

./: .bumpversion.cfg  .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
ghosttrap/: __init__.py  client.py  middleware.py
