[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ghosttrap-sdk"
version = "0.1.0"
description = "Drop-in error reporter for ghosttrap.io"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.urls]
Homepage = "https://github.com/arowley-predictive-power/ghosttrap-sdk"

[tool.setuptools.packages.find]
include = ["ghosttrap*"]
